fixed dropdown word wrap

--- a/css/template.css
+++ b/css/template.css
@@ -46,7 +46,7 @@ blockquote,.grey,.pagenavcounter{color:#bbb}
 .nav-tabs > li.active a,.nav-tabs > li > a:hover{box-shadow:2px 0 2px rgba(0,0,0,.2);outline:0}
 
 .dropdown{position:relative}
-.dropdown-menu{position:absolute;z-index:1000;border-radius:3px;opacity:0;box-shadow:2px 2px 2px rgba(0,0,0,.2);background:#fff;margin-top:-5px}
+.dropdown-menu{position:absolute;z-index:1000;border-radius:3px;opacity:0;box-shadow:2px 2px 2px rgba(0,0,0,.2);background:#fff;margin-top:-5px;white-space:nowrap;}
 .dropdown-menu > li{margin:0 4px;padding:5px;cursor:pointer}
 .dropdown-menu > li:first-child{margin-top:4px}
 .dropdown-menu > li:last-child{margin-bottom:4px}
